# ipl-oracle

./: .env.example  .gitignore  LICENSE.md  README.md  docker-compose.yml  package.json
backend/: Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/agents/: __init__.py  base_agent.py  captain_agent.py  coach_agent.py  crowd_agent.py  pitch_agent.py  player_agent.py  report_agent.py  stadium_agent.py  umpire_agent.py  weather_agent.py
backend/app/api/: __init__.py  routes.py
backend/app/config/: settings.py
backend/app/data/: __init__.py  _playwright_bootstrap.py  _playwright_windows.py  cricbuzz_scraper.py  howstat_scraper.py  iplt20_scraper.py  live_xi_fetcher.py  match_state_detector.py  matchup_processor.py  news_service.py  playwright_scraper.py  schedule_manager.py  tournament_state.py  weather_service.py  xi_cascade.py
backend/app/graph/: __init__.py  graph_loader.py  knowledge_graph.py
backend/app/middleware/: __init__.py  disclaimer.py
backend/app/ml/: __init__.py  catboost_predictor.py  catboost_trainer.py  feature_builder.py
backend/app/personas/: __init__.py  _base_persona.json  hardik_pandya.json  heinrich_klaasen.json  jasprit_bumrah.json  jos_buttler.json  kl_rahul.json  ms_dhoni.json  pat_cummins.json  persona_loader.py  rashid_khan.json  ravindra_jadeja.json  rishabh_pant.json  rohit_sharma.json  ruturaj_gaikwad.json  sunil_narine.json  virat_kohli.json  yuzvendra_chahal.json
backend/app/schemas/: __init__.py  llm_outputs.py
backend/app/services/: __init__.py  agent_factory.py  comm_bus.py  context_renderer.py  (+6 more)
(+54 files in other folders)
