[project]
name = "ipl-oracle-backend"
version = "0.1.0"
description = "IPL Oracle - MiroFish-style swarm intelligence engine for IPL cricket prediction"
readme = {text = "IPL Oracle Backend — MiroFish swarm engine for IPL prediction", content-type = "text/plain"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "kuzu>=0.7.0",
    "mem0ai>=0.1.0",
    "playwright>=1.48.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "playwright-stealth>=0.1.3",
    "feedparser>=6.0",
    "lxml>=5.0",
    "openai>=1.0",
    "catboost>=1.2",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
